# mlog

./: .gitignore  CMakeLists.txt  README.md  logtypes.cpp  logtypes.h  mcolorlog.h  mlog.cpp  mlog.doxyfile  mlog.h  mlog.pri  mlogtypes.cpp
example-log/: CMakeLists.txt  exampleclass.h  main.cpp  mlog-example-log.pro
tst_mlog/: CMakeLists.txt  loggingthread.cpp  loggingthread.h  tst_mlog.cpp  tst_mlog.pro
